--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 #snack-root {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
   position: fixed;
   width: fit-content;
   white-space: pre;
